src/style.css
  /******** Fonts ********/
  @font-face {
    font-family: "Avenir";
    src: url(/public/Fonts/Avenir.ttc) format("truetype");
  }
  
  @font-face {
    font-family: "Helvetica";
    src: url(/public/Fonts/Helvetica.ttc) format("truetype");
  }
  
  @font-face {
    font-family: "HelveticaNeue";
    src: url(/public/Fonts/HelveticaNeue.ttc) format("truetype");
  }
  
  @font-face {
    font-family: "MyriadPro-Regular";
    src: url(/public/Fonts/MyriadPro-Regular.otf) format("opentype");
  }

  @font-face {
    font-family: "NeuzeitGrotesk-Light";
    src: url(/public/Fonts/DIN\ 30640\ Std\ Neuzeit\ Grotesk\ Light.otf) format("opentype");
  }

  @font-face {
    font-family: "NeuzeitGrotesk-Black";
    src: url(/public/Fonts/Neuzeit\ Grotesk\ Cond\ W01\ Black.otf) format("opentype");
  }

  @font-face {
    font-family: "NeuzeitGrotesk-Regular";
    src: url(/public/Fonts/Neuzeit\ Grotesk\ W01\ Regular.otf) format("opentype");
  }

  @font-face {
    font-family: "NeuzeitSBook";
    src: url(/public/Fonts/NeuzeitSBook.ttf) format("truetype");
  }

 /******** General ********/
  * {
    box-sizing: border-box;
  }

  body {
    font-family: "NeuzeitGrotesk-Regular";
    margin: 0;
    padding: 0;
    height: 100vh;
  }
  
  .container {
    margin: 0;
    text-align: center;
  }
  
  /******** Navbar ********/
  .nav {
    color: #364A37;
    background-color: white;
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    gap: 2rem;
    padding: 0 3rem;
    height: 5rem;
    position: sticky;
  }
  
  .title-logo {
    height: auto;
    width: 250px;
    padding-bottom: 0.3rem;
  }

  .nav ul {
    font-weight: 550;
    padding: 0;
    margin: 0;
    list-style: none;
    display: flex;
    gap: 1rem;
  }
  
  .nav a {
    color: inherit;
    text-decoration: none;
    height: 100%;
    display: flex;
    align-items: center;
    padding: .25rem;
  }

  .nav li {
    color: inherit;
    text-decoration: none;
    height: 100%;
    display: flex;
    align-items: center;
    padding: .25rem;
  }

  .navbar-link {
    color: #364A37;
    text-decoration: none;
    font-family: "NeuzeitGrotesk-Regular";
  }

  /******** Carousel ********/
  .slider-container {
    display: flex;
    flex-direction: row-reverse;
    height: 85vh;
    overflow: auto;
    
  }

  /*** Carousel imgs side ***/
  .slider-img {
    width: 60%;
    height: 100%;    
  }

  .slider-img img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    align-items: flex-start;
  }
  
  /*** Carousel text side ***/
  .slider-color {
    flex-grow: 0;
    flex-direction: column;
    width: 40%;
    background-color:#364A37;
    align-items: left;

}

  .slider-text {
    margin: 3rem;
    font-size: 420%;
    color: white;
    text-align: left;
    
  }

  .btn-container {
    display: flex;
    margin: 3rem;
  }

  /******** Landing Cards ********/

  .landing-cards-title {
    margin-top: 6rem;
    font-size: 250%;
  }

  .landing-cards-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    margin: 1rem;
  }

  .landing-cards {
    margin: 1rem;
  }

  .card-txt-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25rem;
    height: 6rem;

  }

  .card-txt-container h5 {
    margin: 0.5rem;
  }

  /******** Services ********/
  .services-container {
    margin: 3rem;
  }

  /******** About ********/
  .about-container {
    margin: 3rem;
  }

